# rust-utils

./: README.md
astrocalc/: Cargo.toml
astrocalc/src/: main.rs
cfgedit/: Cargo.toml
cfgedit/src/: main.rs
chatgpt/: Cargo.toml
chatgpt/src/: main.rs
notify/: Cargo.toml
notify/src/: main.rs
